show posts list on frontpage, added single post template controller and route

--- a/client/templates/post_list.html
+++ b/client/templates/post_list.html
@@ -1,3 +1,8 @@
 <template name="postsList">
-Post List
+	{{#each posts}}
+		<div class="divider"></div>
+		<div class="section">
+			{{> postItem}}
+		</div>
+	{{/each}}
 </template>
