removed unused footer, added functionality to delete posts to authors

--- a/client/templates/post.html
+++ b/client/templates/post.html
@@ -5,4 +5,7 @@
 		<div class="chip">{{likes}} Likes</div>
 	{{/if}}
 	<a href="#" class="btn btn-default js-like-post">Like</a>
+	{{#if canDelete }}
+		<a href="#" class="btn btn-default js-delete-post">Delete</a>
+	{{/if}}
 </template>
